--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -2,7 +2,13 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
 a {
   color: #00B7FF;
+}
+#guests {color: firebrick}
+.list-view {
+  list-style-type: none
+}
+.list-item {
+  padding: .25rem 0
 }
